# lp_resolver

./: .gitignore  LPResolver.iss  README.md  USER_MANUAL.md  build_windows.ps1  pyproject.toml  requirements.txt
lp_resolver/: __init__.py  __main__.py  app.py  cli.py  conflicts.py  decisions.py  discovery.py  engine.py  gui.py  mo2.py  models.py  nif_preview.py  normalize.py  parsers.py  patch_writer.py  pl_nif_scan.py  priority.py  reporting.py
